<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".A2"
    tools:layout_editor_absoluteY="25dp">

    <TextView
        android:id="@+id/textView"
        style="@style/Banner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        style="@style/TextoApellidos"
        android:id="@+id/apellido2"
        android:text="@string/ap2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imagen"
        app:layout_constraintTop_toBottomOf="@+id/apellido1" />

    <TextView
        style="@style/TextoApellidos"
        android:id="@+id/apellido1"
        android:text="@string/ap1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imagen"
        app:layout_constraintTop_toBottomOf="@+id/nombre" />

    <TextView
        style="@style/TextoNombre"
        android:id="@+id/nombre"
        android:text="@string/nombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imagen"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
        android:id="@+id/imagen"
        android:layout_width="97dp"
        android:layout_height="95dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.013"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
        style="@style/Texto2"
        android:id="@+id/textView10"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="24dp"
        android:text="@string/Colorpelo"
        app:layout_constraintBottom_toTopOf="@+id/textView15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

    <TextView
        style="@style/Texto2"
        android:id="@+id/textView15"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="24dp"
        android:text="@string/Colorojos"
        app:layout_constraintBottom_toTopOf="@+id/textView14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        style="@style/Texto2"
        android:id="@+id/textView14"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="24dp"
        android:text="@string/Colorfav"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        style="@style/Texto2"
        android:id="@+id/textView11"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="24dp"
        android:text="@string/Edad"
        app:layout_constraintBottom_toTopOf="@+id/textView16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagen" />

    <TextView
        style="@style/Texto2"
        android:id="@+id/textView16"
        android:layout_marginEnd="224dp"
        android:layout_marginStart="24dp"
        android:text="@string/Sexo"
        app:layout_constraintBottom_toTopOf="@+id/textView17"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        style="@style/Texto2"
        android:id="@+id/textView17"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="24dp"
        android:text="@string/Altura"
        app:layout_constraintBottom_toTopOf="@+id/textView10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <TextView
        style="@style/TextoContenedor"
        android:id="@+id/contEdad"
        android:text="adfaf"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView11"
        app:layout_constraintEnd_toEndOf="@+id/textView11"
        app:layout_constraintHorizontal_bias="0.343"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        style="@style/TextoContenedor"
        android:id="@+id/contSexo"
        android:text="asdffffff"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView16"
        app:layout_constraintEnd_toEndOf="@+id/textView11"
        app:layout_constraintHorizontal_bias="0.34"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        style="@style/TextoContenedor"
        android:id="@+id/contAltura"
        android:text="asdffffff"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView17"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.38"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        style="@style/TextoContenedor"
        android:id="@+id/contPelo"
        android:text="asdffffff"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.71"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        style="@style/TextoContenedor"
        android:id="@+id/contOjos"
        android:layout_width="175dp"
        android:layout_height="33dp"
        android:text="asdffffff"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        style="@style/TextoContenedor"
        android:id="@+id/contFav"
        android:layout_marginBottom="32dp"
        android:layout_marginStart="10dp"
        android:text="asdffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.72"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>