<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".A1"
    tools:layout_editor_absoluteY="25dp">


    <TextView
        android:id="@+id/textView"
        android:layout_width="420dp"
        android:layout_height="61dp"
        android:background="@color/BannerColour2"
        android:fontFamily="@font/changa_one"
        android:gravity="center"
        android:text="@string/banner"
        android:textColor="?android:attr/colorBackground"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/pTatiana"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:onClick="onClickTatiana"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/tatiana" />

    <ImageButton
        android:id="@+id/pMikhail"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:onClick="onClickMikha"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pTatiana"
        app:srcCompat="@drawable/mikha" />

    <ImageButton
        android:id="@+id/pMabel"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:onClick="onClickMabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pMikhail"
        app:srcCompat="@drawable/mabel" />

    <ImageButton
        android:id="@+id/pIsaac"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:onClick="onClickIsaac"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pMabel"
        app:srcCompat="@drawable/isaac" />

    <ImageButton
        android:id="@+id/pDani"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:onClick="onClickDaniel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pIsaac"
        app:srcCompat="@drawable/dani" />

    <ImageButton
        android:id="@+id/pXavi"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:onClick="onClickXavi"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pDani"
        app:srcCompat="@drawable/xavi" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="187dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:gravity="left|center"
        android:text="@string/p5"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@+id/pDani"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="201dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:gravity="left|center"
        android:text="@string/p6"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@+id/pXavi"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="237dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:gravity="left|center"
        android:text="@string/p4"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@+id/pIsaac"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="201dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="112dp"
        android:gravity="left|center"
        android:text="@string/p3"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@+id/pMabel"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="201dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:gravity="left|center"
        android:text="@string/p2"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@+id/pMikhail"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="224dp"
        android:layout_height="55dp"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="18dp"
        android:gravity="left|center"
        android:text="@string/p1"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintStart_toEndOf="@+id/pTatiana"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

</android.support.constraint.ConstraintLayout>